add popup & responsive video

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/base.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@400;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Magnific Popup core CSS file -->
+    <link rel="stylesheet" href="styles/magnific-popup.css">
+
 
     <title>Bliis - Sample 1</title>
     <link rel="shortcut icon" href="./img/favicon-32x32.png" type="image/x-icon">
@@ -137,29 +141,29 @@
             Galeri Foto
         </div>
 
-        <div class="row">
+        <div class="row gallery-item">
             <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <img src="https://dummyimage.com/400x200/fff/000.jpg&text=image" alt="galeri-foto" srcset="">
+                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image1"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image1" alt="galeri-foto" srcset=""></a>
             </div>
 
             <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <img src="https://dummyimage.com/400x200/fff/000.jpg&text=image" alt="galeri-foto" srcset="">
+                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image2"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image2" alt="galeri-foto" srcset=""></a>
             </div>
 
             <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <img src="https://dummyimage.com/400x200/fff/000.jpg&text=image" alt="galeri-foto" srcset="">
+                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image3"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image3" alt="galeri-foto" srcset=""></a>
             </div>
 
             <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <img src="https://dummyimage.com/400x200/fff/000.jpg&text=image" alt="galeri-foto" srcset="">
+                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image4"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image4" alt="galeri-foto" srcset=""></a>
             </div>
 
             <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <img src="https://dummyimage.com/400x200/fff/000.jpg&text=image" alt="galeri-foto" srcset="">
+                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image5"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image5" alt="galeri-foto" srcset=""></a>
             </div>
 
             <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <img src="https://dummyimage.com/400x200/fff/000.jpg&text=image" alt="galeri-foto" srcset="">
+                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image6"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image6" alt="galeri-foto" srcset=""></a>
             </div>
         </div>
     </div>
@@ -169,7 +173,7 @@
             Galeri Video
         </div>
 
-        <div class="container">
+        <div class="container youtube">
             <center>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wNzQ5vSnCBM" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -211,6 +215,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+
+
+    <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+
+    <!-- Magnific Popup core JS file -->
+    <script src="script/jquery.magnific-popup.js"></script>
+    <script src="script/popup.js"></script>
 
 </body>
 
