fix overflow on mobile screen & add some image

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div class="container mt-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <div class="row text-nama">
             <div class="col col-lg-5 col-12">
-                <img src="https://dummyimage.com/300x300/fff/000.jpg&text=image" alt="Foto Pria" srcset=""
+                <img src="img/foto-pria.png" alt="Foto Pria" srcset=""
                     id="foto-pasangan"><br>
-                Sandi
+                Robert
                 <div id="text-nama-ortu">Putra dari Bpk. Anu & Ibu Anu</div>
             </div>
             <div class="col col-lg-2 col-12 d-flex justify-content-center text-and"
@@ -73,9 +73,9 @@
                 &
             </div>
             <div class="col col-lg-5 col-12 col-lala">
-                <img src="https://dummyimage.com/300x300/fff/000.jpg&text=image" alt="Foto Wanita" srcset=""
+                <img src="img/foto-wanita.png" alt="Foto Wanita" srcset=""
                     id="foto-pasangan"><br>
-                Lala
+                Lisa
                 <div id="text-nama-ortu">Putri dari Bpk. Anu & Ibu Anu</div>
             </div>
         </div>
