edit image gallery

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         Bismillahirrahmanirrahim <br>
         Assalaamu`alaikum Warahmatullahi Wabarakaatuh <br><br>
 
-        Dengan memohon rahmat serta ridho Allah Subhanahu Wa Ta`ala, kami bermaksud menyelenggarakan acara pernikahan
-        putra putri kami:
+        Dengan memohon Ridho dan Rahmat Allah SWT, kami bermaksud menyelenggarakan resepsi pernikahan kami
     </div>
 
     <div class="container mt-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -88,14 +87,10 @@
         pukul 10.00 WIB - selesai <br>
         bertempat di Demak <br> <br>
 
-        Merupakan suatu kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan do'a restu <br>
-        kepada putra-putri kami. <br>
+        Merupakan suatu kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan do'a restu.<br>
         Atas kehadiran Bapak/Ibu/Saudara/i kami ucapkan terima kasih. <br> <br>
 
-        Wassalaamu'alaikum Warohmatullahi Wabarokaatuh. <br><br>
-
-        Kami yang berbahagia,<br>
-        Keluarga Bapak Anu
+        Wassalaamu'alaikum Warohmatullahi Wabarokaatuh.
 
     </div>
 
@@ -142,28 +137,28 @@
         </div>
 
         <div class="row gallery-item">
-            <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image1"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image1" alt="galeri-foto" srcset=""></a>
+            <div class="col col-lg-6 col-12 galeri-foto-text mt-2">
+                <a href="img/foto-gallery1.jpg" id="image-gallery1"><img src="img/foto-gallery1.jpg" alt="galeri-foto" srcset=""></a>
             </div>
 
-            <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image2"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image2" alt="galeri-foto" srcset=""></a>
+            <div class="col col-lg-6 col-12 galeri-foto-text mt-2">
+                <a href="img/foto-gallery2.jpg" id="image-gallery2"><img src="img/foto-gallery2.jpg" alt="galeri-foto" srcset=""></a>
             </div>
 
-            <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image3"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image3" alt="galeri-foto" srcset=""></a>
+            <div class="col col-lg-6 col-12 galeri-foto-text mt-2">
+                <a href="img/foto-gallery1.jpg" id="image-gallery1"><img src="img/foto-gallery1.jpg" alt="galeri-foto" srcset=""></a>
             </div>
 
-            <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image4"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image4" alt="galeri-foto" srcset=""></a>
+            <div class="col col-lg-6 col-12 galeri-foto-text mt-2">
+                <a href="img/foto-gallery2.jpg" id="image-gallery2"><img src="img/foto-gallery2.jpg" alt="galeri-foto" srcset=""></a>
             </div>
 
-            <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image5"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image5" alt="galeri-foto" srcset=""></a>
+            <div class="col col-lg-6 col-12 galeri-foto-text mt-2">
+                <a href="img/foto-gallery1.jpg" id="image-gallery1"><img src="img/foto-gallery1.jpg" alt="galeri-foto" srcset=""></a>
             </div>
 
-            <div class="col col-lg-6 col-12 galeri-foto-text mt-1">
-                <a href="https://dummyimage.com/800x400/fff/000.jpg&text=image6"><img src="https://dummyimage.com/400x200/fff/000.jpg&text=image6" alt="galeri-foto" srcset=""></a>
+            <div class="col col-lg-6 col-12 galeri-foto-text mt-2">
+                <a href="img/foto-gallery2.jpg" id="image-gallery2"><img src="img/foto-gallery2.jpg" alt="galeri-foto" srcset=""></a>
             </div>
         </div>
     </div>
@@ -175,7 +170,7 @@
 
         <div class="container youtube">
             <center>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wNzQ5vSnCBM" frameborder="0"
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/K-a8s8OLBSE" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </center>
