edit footer image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="container text-top mt-2">
-        <h4>13 Desember 2020</h4>
+        <h4>31 Desember 2020</h4>
     </div>
 
     <div class="container img-top2 mt-1">
@@ -83,9 +83,9 @@
     <div class="container text-undangan mt-4 pb-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
         yang Insya Allah akan diselenggarakan pada: <br>
-        hari Minggu, 13 Desember 2020 <br>
+        hari Kamis, 31 Desember 2020 <br>
         pukul 10.00 WIB - selesai <br>
-        bertempat di Demak <br> <br>
+        bertempat di London <br> <br>
 
         Merupakan suatu kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan do'a restu.<br>
         Atas kehadiran Bapak/Ibu/Saudara/i kami ucapkan terima kasih. <br> <br>
