trial 100 vh header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="nav bg-dark">
         <h5 class="ml-2 mt-1">
             <div id="tujuan-text>">Kepada Yth :</div>
-            <div id="tujuan-isi">...</div>
+            <div id="tujuan-isi">Anda (di tempat)</div>
         </h5>
     </nav>
 
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="col col-lg-6 col-12 maps mt-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <div id="maps" style="font-size: 20px;">Maps <br> <img
+                <div id="maps" style="font-size: 20px;"> QR Maps<br> <img
                         src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fgoo.gl%2Fmaps%2FiPUedNW1BqYC6q8g8&chs=180x180&choe=UTF-8&chld=L|2'
                         alt='qr code'><a href='https://www.qr-code-generator.com' border='0' style='cursor:default'
                         rel='nofollow'></a>
