--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="container text-top mt-2">
-        <h4>Turut mengundang anda <br>dari kami yang berbahagia.</h4>
+        <h4>Turut mengundang anda <br>dari kami yang berbahagia</h4>
     </div>
 
     <div class="container header mt-2">
@@ -45,7 +45,7 @@
     </div>
 
     <div class="container text-top mt-2">
-        <h4>31 Desember 2020</h4>
+        <h4>14 Februari 2021</h4>
     </div>
 
     <div class="container img-top2 mt-1">
@@ -56,7 +56,7 @@
         Bismillahirrahmanirrahim <br>
         Assalaamu`alaikum Warahmatullahi Wabarakaatuh <br><br>
 
-        Dengan memohon Ridho dan Rahmat Allah SWT, kami bermaksud menyelenggarakan resepsi pernikahan kami
+        Dengan memohon Ridho dan Rahmat Allah SWT, kami bermaksud menyelenggarakan resepsi pernikahan putra-putri kami
     </div>
 
     <div class="container mt-3" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -64,8 +64,8 @@
             <div class="col col-lg-5 col-12">
                 <img src="img/foto-pria.png" alt="Foto Pria" srcset=""
                     id="foto-pasangan"><br>
-                Robert
-                <div id="text-nama-ortu">Putra dari Bpk. Anu & Ibu Anu</div>
+                Robert London
+                <div id="text-nama-ortu">Putra dari Bpk. Budi & Ibu Ani</div>
             </div>
             <div class="col col-lg-2 col-12 d-flex justify-content-center text-and"
                 style="font-size: 50px; display: flex; align-items: center; text-align: center;">
@@ -74,8 +74,8 @@
             <div class="col col-lg-5 col-12 col-lala">
                 <img src="img/foto-wanita.png" alt="Foto Wanita" srcset=""
                     id="foto-pasangan"><br>
-                Lisa
-                <div id="text-nama-ortu">Putri dari Bpk. Anu & Ibu Anu</div>
+                Lisa Birmingham
+                <div id="text-nama-ortu">Putri dari Bpk. Rudi & Ibu Ana</div>
             </div>
         </div>
     </div>
@@ -83,9 +83,9 @@
     <div class="container text-undangan mt-4 pb-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
         yang Insya Allah akan diselenggarakan pada: <br>
-        hari Kamis, 31 Desember 2020 <br>
+        hari Minggu, 14 Februari 2021 <br>
         pukul 10.00 WIB - selesai <br>
-        bertempat di London <br> <br>
+        bertempat di Gedung Resepsi <br> <br>
 
         Merupakan suatu kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan do'a restu.<br>
         Atas kehadiran Bapak/Ibu/Saudara/i kami ucapkan terima kasih. <br> <br>
@@ -97,7 +97,7 @@
     <div class="container mt-3 countdown-maps" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <div class="row text-nama">
             <div class="col col-lg-6 col-12 countdown mt-2">
-                <div id="countdown" style="font-size: 20px;">Countdown Timer</div>
+                <div id="countdown" style="font-size: 20px;">Menuju Acara</div>
                 <div id="countdown-text">
                     <div class="row countdown-text mt-4">
                         <div class="col col-2">
@@ -122,8 +122,7 @@
             <div class="col col-lg-6 col-12 maps mt-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <div id="maps" style="font-size: 20px;"> QR Maps<br> <img
                         src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fgoo.gl%2Fmaps%2FiPUedNW1BqYC6q8g8&chs=180x180&choe=UTF-8&chld=L|2'
-                        alt='qr code'><a href='https://www.qr-code-generator.com' border='0' style='cursor:default'
-                        rel='nofollow'></a>
+                        alt='qr code'>
                 </div>
                 <div id="maps-url"></div>
             </div>
