--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/base.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@400;800&display=swap" rel="stylesheet">
@@ -26,10 +26,10 @@
 <body>
 
     <nav class="nav bg-dark">
-        <h5 class="ml-2 mt-1">
+        <div class="ml-2 mt-1">
             <div id="tujuan-text>">Kepada Yth :</div>
             <div id="tujuan-isi">Anda (di tempat)</div>
-        </h5>
+        </div>
     </nav>
 
     <div class="container img-top mt-1">
@@ -120,9 +120,9 @@
                 </div>
             </div>
             <div class="col col-lg-6 col-12 maps mt-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <div id="maps" style="font-size: 20px;"> QR Maps<br> <img
+                <div id="maps" style="font-size: 20px;"> Menuju Tempat Acara<br> <a href="https://goo.gl/maps/EY1Zf9AGCdyXeUnQ7" target="_blank" rel="noopener noreferrer"><img
                         src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fgoo.gl%2Fmaps%2FiPUedNW1BqYC6q8g8&chs=180x180&choe=UTF-8&chld=L|2'
-                        alt='qr code'>
+                        alt='qr code'></a>
                 </div>
                 <div id="maps-url"></div>
             </div>
@@ -184,7 +184,7 @@
 
     <footer class="footer bg-dark">
         <div class="container">
-            <span id="bliis-logo">Created by <a href="https://www.instagram.com/bliis_nev/" target="_blank"
+            <span id="bliis-logo">Created by <a href="https://bliis.id" target="_blank"
                     rel="noopener noreferrer"><img src="./img/bliis-logo.png" alt="logo bliis" srcset=""></a></span><br>
             <span id="freepik">Some graphic designed by <a href="https://www.freepik.com/" target="_blank"
                     rel="noopener noreferrer">Freepik</a></span>
@@ -200,14 +200,11 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 
 
